WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179277
UIWebView is not rendering content that comes on screen during overflow scroll
https://bugs.webkit.org/show_bug.cgi?id=179277
Summary
UIWebView is not rendering content that comes on screen during overflow scroll
Simon Fraser (smfr)
Reported
2017-11-03 19:26:39 PDT
UIWebView is not rendering content that comes on screen during overflow scroll
Attachments
Patch
(12.16 KB, patch)
2017-11-03 19:32 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(12.39 KB, patch)
2017-11-03 19:34 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-11-03 19:32:55 PDT
Created
attachment 326001
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-11-03 19:34:40 PDT
Created
attachment 326002
[details]
Patch
Simon Fraser (smfr)
Comment 3
2017-11-03 19:39:35 PDT
rdar://problem/34272949
Sam Weinig
Comment 4
2017-11-06 11:21:18 PST
Comment on
attachment 326002
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=326002&action=review
> Source/WebCore/rendering/RenderLayerCompositor.cpp:427 > +#if PLATFORM(IOS) > + return frameView.exposedContentRect(); > +#else > + // Having a m_clipLayer indicates that we're doing scrolling via GraphicsLayers. > + FloatRect visibleRect = m_clipLayer ? FloatRect({ }, frameView.sizeForVisibleContent()) : frameView.visibleContentRect(); > + > + if (frameView.viewExposedRect()) > + visibleRect.intersect(frameView.viewExposedRect().value()); > + > + return visibleRect;
Why the extra indent?
Simon Fraser (smfr)
Comment 5
2017-11-06 13:43:21 PST
https://trac.webkit.org/changeset/224510/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug